platform/runtime/staging/import_legacy/latest/exam_integration/latest/repository_root/runtime/traces/probe.exams-curated-exam01-v1.exams-exam01-prev_charcter/user.out.build.stderr
/home/xapet/Desktop/f/platform/runtime/staging/import_legacy/latest/exam_integration/latest/repository_root/runtime/workspaces/probe.exams-curated-exam01-v1.exams-exam01-prev_charcter/submission/prev_character.c: In function 'prev_character':
/home/xapet/Desktop/f/platform/runtime/staging/import_legacy/latest/exam_integration/latest/repository_root/runtime/workspaces/probe.exams-curated-exam01-v1.exams-exam01-prev_charcter/submission/prev_character.c:12:1: error: control reaches end of non-void function [-Werror=return-type]
   12 | }
      | ^
cc1: all warnings being treated as errors
